--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blockchain-exprerss",
+  "name": "blockchain-without-ipfs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
